--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="Personal Website" />
-    <title>Notes App</title>
-	<head>
+		<meta name="description" content="Markdwon Notes App" />
+		<title>Notes App</title>
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
@@ -25,6 +24,5 @@
 	</head>
 	<body>
 		<div id="root"></div>
-		<script src="index.js"></script>
 	</body>
 </html>
