added icon to tab

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="style.css" />
+		<link rel="icon" href="./assets/markie.png" type="logo" />
+		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
 		<div id="root"></div>
